--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@material-ui/core": "^4.9.3",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.43",
+    "@reduxjs/toolkit": "^1.2.5",
     "clsx": "latest",
+    "history": "^4.10.1",
     "prop-types": "^15.7.2",
     "react": "latest",
     "react-dom": "latest",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "latest",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
